[package]
name = "shoji"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A vbox/hbox layout system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/shoji"
readme="README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
